--- a/BeatSaberLibraryManager.csproj
+++ b/BeatSaberLibraryManager.csproj
@@ -5,6 +5,7 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <UserSecretsId>aa98bfde-d25d-4586-b0c2-3eda774407e2</UserSecretsId>
     </PropertyGroup>
 
     <ItemGroup>
