Adds C# secrets for Spotify credentials and additional logging

--- a/BeatSaberLibraryManager.csproj
+++ b/BeatSaberLibraryManager.csproj
@@ -10,6 +10,8 @@
 
     <ItemGroup>
       <PackageReference Include="BeatSaverSharper" Version="3.4.5" />
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="8.0.0" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="SpotifyAPI.Web.Auth" Version="7.0.2" />
     </ItemGroup>
