--- a/BeatSaberLibraryManager.csproj
+++ b/BeatSaberLibraryManager.csproj
@@ -15,4 +15,8 @@
       <PackageReference Include="SpotifyAPI.Web.Auth" Version="7.0.2" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include=".idea" />
+    </ItemGroup>
+
 </Project>
